applications/openeuler-website-v2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: website-v2
  name: website-v2
