applications/openeuler-website-v2/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openeuler-website-v2-frontend
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      component: website-frontend
  template:
    metadata:
      labels:
        component: website-frontend
    spec:
      containers:
      - name: vuepress
        image: opensourceway/openeuler-website-frontend:0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openeuler-website-v2-backend
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      component: website-backend
  template:
    metadata:
      labels:
        component: website-backend
    spec:
      containers:
        - name: nodejs
          image: opensourceway/openeuler-website-backend:0.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8090
              name: http
              protocol: TCP
