applications/openeuler-website-v2/v1-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openeuler-website-v1
  namespace: website-v2
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      component: website-v1
  template:
    metadata:
      labels:
        component: website-v1
    spec:
      containers:
      - name: website-v1
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-website-v1:aac3100af63e8fab9c1e86a9e80f694e1c6d27f5
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
