applications/openeuler-website-v2/cibot-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: openeuler-bot-internal
spec:
  type: ExternalName
  externalName: botservice-release.bot-release.svc.cluster.local
