applications/openeuler-website-v2/cve-backend.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: cve-srv-service
spec:
  type: ExternalName
  externalName: cve-srv-service.cve.svc.cluster.local
