applications/openeuler-website-v2/meeting-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: openeuler-meetingserver-internal
spec:
  type: ExternalName
  externalName: meeting-service.meetingserver.svc.cluster.local
