applications/openeuler-website-v2/service.yaml
# Config web frontend service
---
apiVersion: v1
kind: Service
metadata:
  name: website-frontend-service
spec:
  externalTrafficPolicy: Cluster
  ports:
    - name: httpport
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    component: website-frontend
  type: LoadBalancer

---
# Config web backend service
---
apiVersion: v1
kind: Service
metadata:
  name: website-backend-service
spec:
  externalTrafficPolicy: Cluster
  ports:
    - name: httpport
      protocol: TCP
      port: 80
      targetPort: 8090
  selector:
    component: website-backend
  type: LoadBalancer
