applications/openeuler-website-v2/ingress-backend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header Strict-Transport-Security "max-age=31536000";
      add_header Cache-Control no-store;
      add_header Pragma no-cache;
      add_header X-Frame-Options "SAMEORIGIN";
      add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'unsafe-inline' *.baidu.com busuanzi.ibruce.info api.ip.sb cdn.jsdelivr.net;object-src 'none';frame-ancestors 'self'";
  name: website-v2-ingress-backend
spec:
  tls:
    - hosts:
        - next.openeuler.org
      secretName: website-v2-tls-main
  rules:
    - host: next.openeuler.org
      http:
        paths:
          - backend:
              serviceName: website-backend-service
              servicePort: 80
            path: /api(/|$)(.*)
          - backend:
              serviceName: website-frontend-service
              servicePort: 80
            path: /
