applications/openeuler-website-v2/ingress.yaml
#  www-ingress   ingress-backend  ingress-main minisote-ingress
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/limit-connections: "2000"
    nginx.ingress.kubernetes.io/limit-rps: "2000"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header Strict-Transport-Security "max-age=31536000";
      add_header X-Frame-Options "ALLOW-FROM https://vhall.huawei.com";
      add_header X-Cache-Status $upstream_cache_status;
      add_header Content-Security-Policy "script-src 'self' *.baidu.com ers.baidu.com www.google-analytics.com www.googletagmanager.com 'unsafe-eval' 'unsafe-inline';object-src 'none';frame-ancestors https://vhall.huawei.com";
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^/zh/other/cla https://clasign.osinfra.cn/sign/Z2l0ZWUlMkZvcGVuZXVsZXI= redirect;
      rewrite ^/en/other/cla https://clasign.osinfra.cn/sign/Z2l0ZWUlMkZvcGVuZXVsZXI= redirect;
      rewrite ^/zh/docs(/|$)(.*) https://docs.openeuler.org/zh/docs/$2 redirect;
      rewrite ^/en/docs(/|$)(.*) https://docs.openeuler.org/en/docs/$2 redirect;
      rewrite ^/ru(/|$)(.*) https://ru.openeuler.org/ru/$2 redirect;
      proxy_cache statics_cache;
      proxy_cache_lock on;
      proxy_cache_key $server_name$uri$is_args$args;
      proxy_ignore_headers Cache-Control;
      proxy_ignore_headers Set-Cookie;
      proxy_cache_valid 60m;
      location ~ /purge(/.*) {
          proxy_cache_purge  statics_cache $server_name$1$is_args$args;
      }
      proxy_cache_bypass $nocache;
      proxy_no_cache $nocache;
      stream {
        geoip2 /etc/maxmind-country.mmdb {
        $geoip2_data_country_code default=US source=$remote_addr country iso_code;
        }
      }
      set $country_china false;
      if ($geoip2_city_country_name ~ "Hong Kong"){
          set $country_china true;
      }
      if ($geoip2_city_country_name ~ "China"){
          set $country_china true;
      }
      if ($country_china ~ "true"){
          rewrite ^/$ /zh redirect;
      }
      if ($country_china ~ "false"){
          rewrite ^/$ /en redirect;
      }
  name: openeuler-v2-www-website-ingress
spec:
  tls:
    - hosts:
        - www.openeuler.org
      secretName: openeuler-v2-www-website-tls
  rules:
    - host: www.openeuler.org
      http:
        paths:
          - backend:
              serviceName: website-frontend-service
              servicePort: 80
            path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/custom-http-errors: "400,500"
  name: website-v2-www-ingress-backend
spec:
  tls:
    - hosts:
        - www.openeuler.org
      secretName: website-v2-www-website-tls
  rules:
    - host: www.openeuler.org
      http:
        paths:
          - backend:
              serviceName: website-backend-service
              servicePort: 80
            path: /api(/|$)(.*)
          - backend:
              serviceName: openeuler-meetingserver-internal
              servicePort: 80
            path: /api-sig(/|$)(.*)
          - backend:
              serviceName: openeuler-api-cve
              servicePort: 8080
            path: /api-cve(/|$)(.*)
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/permanent-redirect: https://www.openeuler.org
  name: website-v2-ingress-main
spec:
  tls:
    - hosts:
        - openeuler.org
      secretName: website-v2-tls-main-secret
  rules:
    - host: openeuler.org
      http:
        paths:
          - backend:
              serviceName: website-frontend-service
              servicePort: 80
            path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/temporal-redirect: https://www.openeuler.org/zh/other/projects/isula/
  name: isula-ingress
spec:
  tls:
    - hosts:
        - isula.openeuler.org
      secretName: isula-tls
  rules:
    - host: isula.openeuler.org
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/temporal-redirect: https://www.openeuler.org/zh/other/projects/atune/
  name: a-tune-ingress
spec:
  tls:
    - hosts:
        - a-tune.openeuler.org
      secretName: a-tune-tls
  rules:
    - host: a-tune.openeuler.org
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/temporal-redirect: https://www.openeuler.org/zh/other/projects/stratovirt/
  name: stratovirt-ingress
spec:
  tls:
    - hosts:
        - stratovirt.openeuler.org
      secretName: stratovirt-tls
  rules:
    - host: stratovirt.openeuler.org
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/temporal-redirect: https://www.openeuler.org/zh/other/projects/bishengjdk/
  name: bisheng-ingress
spec:
  tls:
    - hosts:
        - bishengjdk.openeuler.org
      secretName: bishengjdk-tls
  rules:
    - host: bishengjdk.openeuler.org
