applications/openeuler-website-v2/minisite-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/temporal-redirect: https://openeuler.org/zh/other/minisite/isula/
  name: isula-ingress
spec:
  tls:
    - hosts:
        - isula.openeuler.org
      secretName: isula-tls
  rules:
    - host: isula.openeuler.org
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/temporal-redirect: https://openeuler.org/zh/other/minisite/atune/
  name: a-tune-ingress
spec:
  tls:
    - hosts:
        - a-tune.openeuler.org
      secretName: a-tune-tls
  rules:
    - host: a-tune.openeuler.org
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/temporal-redirect: https://openeuler.org/zh/other/minisite/stratovirt/
  name: stratovirt-ingress
spec:
  tls:
    - hosts:
        - stratovirt.openeuler.org
      secretName: stratovirt-tls
  rules:
    - host: stratovirt.openeuler.org
